llama-stack/templates/llama-stack-playground/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  name: llama-stack-playground
  labels:
    app.kubernetes.io/name: llama-stack-playground
    app.kubernetes.io/version: "latest"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: llama-stack-playground
