llama-stack/templates/llama-stack-playground/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  name: llama-stack-playground
  labels:
    app.kubernetes.io/name: llama-stack-playground
    app.kubernetes.io/version: "latest"
spec:
  to:
    kind: Service
    name: llama-stack-playground
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
